      then a flying mount used in that region will be restricted to the
      maxRiding bonus defined in the MountType structure.
   -- Fixed bug in ForgetSkill where a unit which was an Apprentice and
      forgot any skill which made them an apprentice (only MANIPULATION
      currently) they didn't get unmarked as an apprentice.  (Thanks to
      Ben Lloyd for pointing that out)
   -- Fixed a bug in GIVE ALL EXCEPT which caused a wierdness when you
      tried to give more than you had.
   -- Fixed bug with CanStudy which showed disabled skills.
   -- Fixed bug with DBOWs taking down force shields.  Only *spells* take
      down shields.
   -- Updated skillshows with the patch provided by Andrew Zhilenko which
   -- Patched ADVANCE battle bugs reported by Andrew Zhilenko
      <andrew@nextra.cz>
      makes the logic in there cleaner.
   -- Added Georg Gottschalks 'volcano' terrain.  It's a bit odd in that
      it requires flying to get into (move cost of 6) BUT mounts within it
      only get a max of riding mounts bonus. (IE, a WING gets a max 3 riding
      bonus in it due to trecherous terrain)
   -- Tweaked the quantities of Admantium by default.
   -- Added Javelin weapon designed by Terho T. Uotila
      <ttuotila@cc.helsinki.fi>, who wanted a cheap ranged weapon.
   -- Various small fixes provided by Ben Lloyd
   -- Fixed WITHDRAW <item> to be the same as WITHDRAW 1 <item>
   -- Some other small fixes from Ben Lloyd. <Ben.Lloyd.1@uni.massey.ac.nz>
   -- Increased the number of possible products per hex from 5 to 7.
   -- Added Georg Gottschalks underdeep and multi-level underworld and gems.
   -- Removed a whole bunch of unused ifdefs from the code
   -- Added new combat system from Tom Alsen
   -- Reorganized terrain data structures to make future extension of number
      of resources, lairs, races easier.
   -- Changed lair percent to be percent of terrain type which has lair
      rather than percent chance for each type of lair.